--- a/ReadMe
+++ b/ReadMe
@@ -1,4 +1,4 @@
-este é um repositório dos códigos criados para a aula de POO.
+este é um repositório dos códigos criados para a cadeira de POO.
 
 por rebeca pacheco :)))
 recife - 2021
